--- a/index.html
+++ b/index.html
@@ -31,32 +31,32 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Download DevCPU</h3>
-        <table>
-          <tr><td>Windows 64-bit</td><td><a href="http://devcpu.com/rel/0/devcpu.win32.win32.x86_64.zip">devcpu.win32.win32.x86_64.zip</a></td></tr>
-          <tr><td>Windows 64-bit</td><td><a href="http://devcpu.com/rel/0/devcpu.win32.win32.x86_64.zip">devcpu.win32.win32.x86_64.zip</a></td></tr>
-          <tr><td>Windows 32-bit</td><td><a href="http://devcpu.com/rel/0/devcpu.win32.win32.x86.zip">devcpu.win32.win32.x86.zip</a></td></tr>
-  <!--        
-Windows 32-bit (WPF)      devcpu.win32.wpf.x86.zip
-Mac OSX x86_64 (Cocoa)    devcpu.macosx.cocoa.x86_64.zip
-Mac OSX x86 (Carbon)      devcpu.macosx.carbon.x86.zip
-Mac OSX x86 (Cocoa)       devcpu.macosx.cocoa.x86.zip
-Mac OSX PPC (Carbon)      devcpu.macosx.carbon.ppc.zip
-Mac OSX PPC (Cocoa)       devcpu.macosx.cocoa.ppc.zip
-Linux x86_64 (GTK 2)      devcpu.linux.gtk.x86_64.zip
-Linux x86 (GTK 2)         devcpu.linux.gtk.x86.zip
-Linux x86 (Motif)         devcpu.linux.motif.x86.zip
-Linux PPC64 (GTK 2)       devcpu.linux.gtk.ppc64.zip
-Linux PPC (GTK 2)         devcpu.linux.gtk.ppc.zip
-AIX PPC64 (GTK 2)         devcpu.aix.gtk.ppc64.zip
-AIX PPC (GTK 2)           devcpu.aix.gtk.ppc.zip
-AIX PPC (Motif)           devcpu.aix.motif.ppc.zip
-HP-UX IA64 (GTK 2)        devcpu.hpux.gtk.ia64.zip
-HP-UX IA64_32 (GTK 2)     devcpu.hpux.gtk.ia64_32.zip
-HP-UX IA64_32 (Motif)     devcpu.hpux.motif.ia64_32.zip
-Solaris 10 x86 (GTK 2)    devcpu.solaris.gtk.x86.zip
-Solaris 10 SPARC (GTK 2)  devcpu.solaris.gtk.sparc.zip -->
-        </table>
+        <h3>Download DevCPU, Release 0</h3>
+<table>
+<tr><td>Windows 64-bit</td><td><a href="http://devcpu.com/rel/0/devcpu.win32.win32.x86_64.zip">devcpu.win32.win32.x86_64.zip</a></td></tr>
+<tr><td>Windows 32-bit</td><td><a href="http://devcpu.com/rel/0/devcpu.win32.win32.x86.zip">devcpu.win32.win32.x86.zip</a></td></tr>
+<tr><td>Windows 32-bit (WPF)</td><td><a href="http://devcpu.com/rel/0/devcpu.win32.wpf.x86.zip">devcpu.win32.wpf.x86.zip</a></td></tr>
+<tr><td>Mac OSX x86_64 (Cocoa)</td><td><a href="http://devcpu.com/rel/0/devcpu.macosx.cocoa.x86_64.zip">devcpu.macosx.cocoa.x86_64.zip</a></td></tr>
+<tr><td>Mac OSX x86 (Carbon)</td><td><a href="http://devcpu.com/rel/0/devcpu.macosx.carbon.x86.zip">devcpu.macosx.carbon.x86.zip</a></td></tr>
+<tr><td>Mac OSX x86 (Cocoa)</td><td><a href="http://devcpu.com/rel/0/devcpu.macosx.cocoa.x86.zip">devcpu.macosx.cocoa.x86.zip</a></td></tr>
+<tr><td>Mac OSX PPC (Carbon)</td><td><a href="http://devcpu.com/rel/0/devcpu.macosx.carbon.ppc.zip">devcpu.macosx.carbon.ppc.zip</a></td></tr>
+<tr><td>Mac OSX PPC (Cocoa)</td><td><a href="http://devcpu.com/rel/0/devcpu.macosx.cocoa.ppc.zip">devcpu.macosx.cocoa.ppc.zip</a></td></tr>
+<tr><td>Linux x86_64 (GTK 2)</td><td><a href="http://devcpu.com/rel/0/devcpu.linux.gtk.x86_64.zip">devcpu.linux.gtk.x86_64.zip</a></td></tr>
+<tr><td>Linux x86 (GTK 2)</td><td><a href="http://devcpu.com/rel/0/devcpu.linux.gtk.x86.zip">devcpu.linux.gtk.x86.zip</a></td></tr>
+<tr><td>Linux x86 (Motif)</td><td><a href="http://devcpu.com/rel/0/devcpu.linux.motif.x86.zip">devcpu.linux.motif.x86.zip</a></td></tr>
+<tr><td>Linux PPC64 (GTK 2)</td><td><a href="http://devcpu.com/rel/0/devcpu.linux.gtk.ppc64.zip">devcpu.linux.gtk.ppc64.zip</a></td></tr>
+<tr><td>Linux PPC (GTK 2)</td><td><a href="http://devcpu.com/rel/0/devcpu.linux.gtk.ppc.zip">devcpu.linux.gtk.ppc.zip</a></td></tr>
+<tr><td>AIX PPC64 (GTK 2)</td><td><a href="http://devcpu.com/rel/0/devcpu.aix.gtk.ppc64.zip">devcpu.aix.gtk.ppc64.zip</a></td></tr>
+<tr><td>AIX PPC (GTK 2)</td><td><a href="http://devcpu.com/rel/0/devcpu.aix.gtk.ppc.zip">devcpu.aix.gtk.ppc.zip</a></td></tr>
+<tr><td>AIX PPC (Motif)</td><td><a href="http://devcpu.com/rel/0/devcpu.aix.motif.ppc.zip">devcpu.aix.motif.ppc.zip</a></td></tr>
+<tr><td>HP-UX IA64 (GTK 2)</td><td><a href="http://devcpu.com/rel/0/devcpu.hpux.gtk.ia64.zip">devcpu.hpux.gtk.ia64.zip</a></td></tr>
+<tr><td>HP-UX IA64_32 (GTK 2)</td><td><a href="http://devcpu.com/rel/0/devcpu.hpux.gtk.ia64_32.zip">devcpu.hpux.gtk.ia64_32.zip</a></td></tr>
+<tr><td>HP-UX IA64_32 (Motif)</td><td><a href="http://devcpu.com/rel/0/devcpu.hpux.motif.ia64_32.zip">devcpu.hpux.motif.ia64_32.zip</a></td></tr>
+<tr><td>Solaris 10 x86 (GTK 2)</td><td><a href="http://devcpu.com/rel/0/devcpu.solaris.gtk.x86.zip">devcpu.solaris.gtk.x86.zip</a></td></tr>
+<tr><td>Solaris 10 SPARC (GTK 2)</td><td><a href="http://devcpu.com/rel/0/devcpu.solaris.gtk.sparc.zip">devcpu.solaris.gtk.sparc.zip</a></td></tr>
+<tr><td></td><td></td></tr>
+<tr><td>Eclipse plugin</td><td><a href="http://devcpu.com/rel/0/devcpu_eclipse.zip">devcpu_eclipse.zip</a></td></tr>
+</table>
       </section>
     </div>
 
