--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Download DevCPU, Release 0</h3>
+        <h3>Download DevCPU, Release 0</h3><br>
+        Select from the following distributions:<br>
 <table>
+<tr><td>Eclipse plugin</td><td><a href="http://devcpu.com/rel/0/devcpu_eclipse.zip">devcpu_eclipse.zip</a></td></tr>
 <tr><td>Windows 64-bit</td><td><a href="http://devcpu.com/rel/0/devcpu.win32.win32.x86_64.zip">devcpu.win32.win32.x86_64.zip</a></td></tr>
 <tr><td>Windows 32-bit</td><td><a href="http://devcpu.com/rel/0/devcpu.win32.win32.x86.zip">devcpu.win32.win32.x86.zip</a></td></tr>
 <tr><td>Windows 32-bit (WPF)</td><td><a href="http://devcpu.com/rel/0/devcpu.win32.wpf.x86.zip">devcpu.win32.wpf.x86.zip</a></td></tr>
@@ -54,8 +56,6 @@
 <tr><td>HP-UX IA64_32 (Motif)</td><td><a href="http://devcpu.com/rel/0/devcpu.hpux.motif.ia64_32.zip">devcpu.hpux.motif.ia64_32.zip</a></td></tr>
 <tr><td>Solaris 10 x86 (GTK 2)</td><td><a href="http://devcpu.com/rel/0/devcpu.solaris.gtk.x86.zip">devcpu.solaris.gtk.x86.zip</a></td></tr>
 <tr><td>Solaris 10 SPARC (GTK 2)</td><td><a href="http://devcpu.com/rel/0/devcpu.solaris.gtk.sparc.zip">devcpu.solaris.gtk.sparc.zip</a></td></tr>
-<tr><td></td><td></td></tr>
-<tr><td>Eclipse plugin</td><td><a href="http://devcpu.com/rel/0/devcpu_eclipse.zip">devcpu_eclipse.zip</a></td></tr>
 </table>
       </section>
     </div>
