--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Download DevCPU, Release 0</h3><br>
+        <h3>Download DevCPU, Release 0</h3>
         Select from the following distributions:<br>
 <table>
 <tr><td>Eclipse plugin</td><td><a href="http://devcpu.com/rel/0/devcpu_eclipse.zip">devcpu_eclipse.zip</a></td></tr>
