--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>Download DevCPU, Release 0</h3>
-        Select from the following distributions:<br>
+Note: Only the Windows 64-bit version has actually been tested. For everything else, it will either work or it won't. I'm not providing any support until the first normal release.<br><br>
+Select from the following distributions:<br>
 <table>
 <tr><td>Eclipse plugin</td><td><a href="http://devcpu.com/rel/0/devcpu_eclipse.zip">devcpu_eclipse.zip</a></td></tr>
 <tr><td>Windows 64-bit</td><td><a href="http://devcpu.com/rel/0/devcpu.win32.win32.x86_64.zip">devcpu.win32.win32.x86_64.zip</a></td></tr>
@@ -57,6 +58,7 @@
 <tr><td>Solaris 10 x86 (GTK 2)</td><td><a href="http://devcpu.com/rel/0/devcpu.solaris.gtk.x86.zip">devcpu.solaris.gtk.x86.zip</a></td></tr>
 <tr><td>Solaris 10 SPARC (GTK 2)</td><td><a href="http://devcpu.com/rel/0/devcpu.solaris.gtk.sparc.zip">devcpu.solaris.gtk.sparc.zip</a></td></tr>
 </table>
+<a href="http://devcpu.com/license.php">License</a>
       </section>
     </div>
 
